feat: retry validation, exception handling